# conteb

./: README.md  pyproject.toml
cde_benchmark/embedders/: base_embedder.py  bm25_embedder.py  colbert_embedder.py  contextual_embedder.py  dataset_stats_computer.py  sentence_transformer_embedder.py
cde_benchmark/evaluators/: eval_utils.py  longembed.py  nanobeir.py
cde_benchmark/formatters/: data_formatter.py
scripts/evaluation/: eval_conteb.py
